plugins {
    id "com.github.sherter.google-java-format" version "0.8"
    id "com.avast.gradle.docker-compose" version "0.10.9"
    id "io.spring.dependency-management" version "1.0.9.RELEASE"
}

ext.commonLibs = [immutablesVersion: "2.8.8"]

allprojects {
    apply plugin: "java"
    apply plugin: "idea"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "com.github.sherter.google-java-format"

    group "com.subwaymonitor"
    version "1.0"

    sourceCompatibility = 11
    targetCompatibility = 11

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:2.2.6.RELEASE")
        }
    }

    dependencies {
        testCompile group: "org.springframework.boot", name: "spring-boot-starter-test", {
            exclude group: "junit", module: "junit"
            exclude group: "org.junit.vintage", module: "junit-vintage-engine"
        }
        testCompile group: "org.junit.jupiter", name: "junit-jupiter", version: "5.6.2"
    }

    test {
        useJUnitPlatform()
    }

    def generatedJavaSourcesPath = "$buildDir/generated-sources/java"
    def generatedJavaSourcesDir = file(generatedJavaSourcesPath)

    compileJava {
        options.compilerArgs = [
                "-s",
                generatedJavaSourcesPath
        ]
    }

    sourceSets {
        main {
            java {
                srcDir generatedJavaSourcesDir
            }
        }
    }

    compileJava.dependsOn "googleJavaFormat"
}
